# zero-shot-replication

./: .gitignore  README.md  pyproject.toml
psets/MSFT-SPARKS-AGI/: all.jsonl
results/anthropic/gsm8k/claude_2/: anthropic_gsm8k__model_eq_claude_2__temperature_eq_0p7.jsonl  anthropic_gsm8k__model_eq_claude_2__temperature_eq_0p7_eval_results.jsonl
results/anthropic/msft_sparks_agi/claude_2/: anthropic_msft_sparks_agi__model_eq_claude_2__temperature_eq_0p7.jsonl
results/automata/human_eval/gpt_4_0613/: automata_human_eval__model_eq_gpt_4_0613__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1_eval_results.json
results/automata/leetcode/gpt_4/: automata_leetcode__model_eq_gpt_4__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_py-interpreter.jsonl  automata_leetcode__model_eq_gpt_4__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_py-interpreter_eval_results.jsonl
results/automata/leetcode/gpt_4_0613/: automata_leetcode__model_eq_gpt_4_0613__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0.jsonl  automata_leetcode__model_eq_gpt_4_0613__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_eval_results.jsonl  automata_leetcode__model_eq_gpt_4_0613__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_py-interpreter.jsonl  automata_leetcode__model_eq_gpt_4_0613__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_py-interpreter_eval_results.jsonl
results/automata/leetcode_msft_sparks/gpt_4/: automata_leetcode_msft_sparks__model_eq_gpt_4__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_py-interpreter.jsonl
results/automata/leetcode_msft_sparks/gpt_4_0613/: automata_leetcode_msft_sparks__model_eq_gpt_4_0613__temperature_eq_0p7__quant_eq_proprietary__version_eq_0p1p0_py-interpreter.jsonl
results/hugging_face/human_eval/Phind_Phind_CodeLlama_34B_v2/: hugging_face_human_eval__model_eq_Phind_Phind_CodeLlama_34B_v2__temperature_eq_0p1__quant_eq_bfloat16__version_eq_0p1_eval_results.json  hugging_face_human_eval__model_eq_Phind_Phind_CodeLlama_34B_v2__temperature_eq_0p1__quant_eq_bfloat16__version_eq_0p1p0_eval_results.json  hugging_face_human_eval__model_eq_Phind_Phind_CodeLlama_34B_v2__temperature_eq_0p1__quant_eq_eight_bit__version_eq_0p1p0_eval_results.json  hugging_face_human_eval__model_eq_Phind_Phind_CodeLlama_34B_v2__temperature_eq_0p1__version_eq_0p1_eval_results.json
results/hugging_face/human_eval/WizardLM_WizardCoder_Python_34B_V1p0/: hugging_face_human_eval__model_eq_WizardLM_WizardCoder_Python_34B_V1p0__temperature_eq_0p2__quant_eq_float16_eval_results.json  test_eval_results.json  test_loader.py
results/openai/msft_sparks_agi/gpt_3p5_turbo/: openai_msft_sparks_agi__model_eq_gpt_3p5_turbo__temperature_eq_0p7.jsonl
zero_shot_replication/: runner.py
zero_shot_replication/core/: base.py  utils.py
zero_shot_replication/datasets/: base.py  human_eval.py  leetcode.py  math.py  sparks_of_agi.py
zero_shot_replication/evals/: eval_utils.py  run_gsm8k_eval.py  run_leetcode_eval.py
zero_shot_replication/llm_providers/: anthropic_provider.py  automata.py  automata_provider.py  base.py  hugging_face_provider.py  huggingface.py  openai_provider.py  provider_manager.py
zero_shot_replication/model/: __init__.py  anthropic_model.py  base.py  openai_model.py
zero_shot_replication/model/hugging_face_model/: base.py  hf_code_llama.py  meta_llama.py  phind_model.py  wizard_model.py
(+16 files in other folders)
